<resources>
    <string name="app_name">TrueORFalse</string>
    <string name="action_settings">Settings</string>
    <string name="startGame">Start game</string>
    <string name="GoToGIT">Go to GitHub</string>
    <string name="choose">Choose the option!</string>
    <string name="info">Go to App info</string>
    <string name="t">True</string>
    <string name="f">False</string>
    <string name="ex">Exit</string>
    <string name="author">It is my first serious project. I made it to train my skills. This app is full written in
        Kotlin language.
    </string>
</resources>
